[gd_scene load_steps=16 format=4 uid="uid://c3ygqiwpebvgo"]

[ext_resource type="Script" uid="uid://mu6b5dd732jl" path="res://scripts/maps/space.gd" id="1_cc3wn"]
[ext_resource type="Texture2D" uid="uid://bbfgs2quoml7y" path="res://assets/maps/space/background.png" id="2_dg1r3"]
[ext_resource type="Texture2D" uid="uid://diq47j4xu33t8" path="res://assets/maps/space/system-path-lower.png" id="3_6yn35"]
[ext_resource type="Texture2D" uid="uid://cpysa680w80kc" path="res://assets/tiles/tiles.png" id="3_7dgrx"]
[ext_resource type="Texture2D" uid="uid://v2s7o2abpo1x" path="res://assets/maps/space/opponent-path-overlay.png" id="4_6yn35"]
[ext_resource type="Texture2D" uid="uid://d1762jn50dg58" path="res://assets/maps/space/opponent-path.png" id="4_xo5vr"]
[ext_resource type="Texture2D" uid="uid://cokhklnnsm3ns" path="res://assets/maps/space/system-path-lower-overlay.png" id="4_ypn1a"]
[ext_resource type="Texture2D" uid="uid://mthp384vqm2e" path="res://assets/maps/space/system-path-upper.png" id="5_ypn1a"]
[ext_resource type="Texture2D" uid="uid://dldn573ml8f5l" path="res://assets/maps/space/system-path-upper-overlay.png" id="8_ryin2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wijl4"]
texture = ExtResource("3_7dgrx")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
0:0/0/custom_data_0 = 1
1:0/0 = 0
1:0/0/custom_data_0 = 2
2:0/0 = 0
2:0/0/custom_data_0 = 3

[sub_resource type="TileSet" id="TileSet_e0an3"]
tile_size = Vector2i(50, 50)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 2
sources/0 = SubResource("TileSetAtlasSource_wijl4")

[sub_resource type="Curve2D" id="Curve2D_4xfga"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 700, 0, 0, 0, 0, 100, 700, 0, 0, 0, 0, 100, 650, 0, 0, 0, 0, 250, 650, 0, 0, 0, 0, 250, 850, 0, 0, 0, 0, 300, 850, 0, 0, 0, 0, 300, 900, 0, 0, 0, 0, 350, 900, 0, 0, 0, 0, 350, 950, 0, 0, 0, 0, 450, 950, 0, 0, 0, 0, 450, 900, 0, 0, 0, 0, 500, 900, 0, 0, 0, 0, 500, 650, 0, 0, 0, 0, 450, 650, 0, 0, 0, 0, 450, 600, 0, 0, 0, 0, 400, 600, 0, 0, 0, 0, 400, 450, 0, 0, 0, 0, 450, 450, 0, 0, 0, 0, 450, 400, 0, 0, 0, 0, 600, 400, 0, 0, 0, 0, 600, 150, 0, 0, 0, 0, 550, 150, 0, 0, 0, 0, 550, 100, 0, 0, 0, 0, 300, 100, 0, 0, 0, 0, 300, 150, 0, 0, 0, 0, 200, 150, 0, 0, 0, 0, 200, 200, 0, 0, 0, 0, 0, 200)
}
point_count = 28

[sub_resource type="Curve2D" id="Curve2D_paxxb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, 0, 0, 0, 0, 0, 50, 100, 0, 0, 0, 0, 100, 100, 0, 0, 0, 0, 100, 200, 0, 0, 0, 0, 150, 200, 0, 0, 0, 0, 150, 250, 0, 0, 0, 0, 650, 250, 0, 0, 0, 0, 650, 200, 0, 0, 0, 0, 700, 200, 0, 0, 0, 0, 700, 100, 0, 0, 0, 0, 650, 100, 0, 0, 0, 0, 650, 50, 0, 0, 0, 0, 550, 50, 0, 0, 0, 0, 550, 100, 0, 0, 0, 0, 500, 100, 0, 0, 0, 0, 500, 350, 0, 0, 0, 0, 550, 350, 0, 0, 0, 0, 550, 450, 0, 0, 0, 0, 600, 450, 0, 0, 0, 0, 600, 550, 0, 0, 0, 0, 650, 550, 0, 0, 0, 0, 650, 650, 0, 0, 0, 0, 600, 650, 0, 0, 0, 0, 600, 700, 0, 0, 0, 0, 550, 700, 0, 0, 0, 0, 550, 750, 0, 0, 0, 0, 450, 750, 0, 0, 0, 0, 450, 700, 0, 0, 0, 0, 250, 700, 0, 0, 0, 0, 250, 750, 0, 0, 0, 0, 150, 750, 0, 0, 0, 0, 150, 800, 0, 0, 0, 0, 100, 800, 0, 0, 0, 0, 100, 1000)
}
point_count = 34

[sub_resource type="Curve2D" id="Curve2D_gldc4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, 0, 0.435, -100, -0.435, 100, 350, 250, 0, -150, 0, 150, 350, 575, 50, -100, -50, 100, 150, 800, 0, 0, 0, 0, 100, 1000)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_0cso3"]
_data = {
"points": PackedVector2Array(350, 0, 350, 0, 450, 600, 0, 0, 0, 0, 800, 500, 0, 0, 0, 0, 800, 200, 350, 0, 350, 0, 450, 100)
}
point_count = 4

[node name="Map" type="Control"]
custom_minimum_size = Vector2(750, 1000)
layout_mode = 3
anchors_preset = 0
offset_right = 750.0
offset_bottom = 1000.0
mouse_filter = 1
script = ExtResource("1_cc3wn")

[node name="BaseTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("2_dg1r3")

[node name="SystemPathLowerTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("3_6yn35")

[node name="SystemPathLowerOverlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("4_ypn1a")

[node name="OpponentPathTexture" type="TextureRect" parent="."]
z_index = 11
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("4_xo5vr")

[node name="OpponentPathOverlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 11
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("4_6yn35")

[node name="SystemPathUpperTexture" type="TextureRect" parent="."]
z_index = 13
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("5_ypn1a")

[node name="SystemPathUpperOverlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 13
layout_mode = 1
anchors_preset = -1
offset_right = 750.0
offset_bottom = 1000.0
texture = ExtResource("8_ryin2")

[node name="Terrain" type="TileMapLayer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.666667)
z_index = 20
position = Vector2(-25, -25)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAQAAAABAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAgAAAACAAAAAAAAAAkAAAACAAAAAAAAAAoAAAACAAAAAAAAAAsAAAACAAAAAAAAAAwAAAACAAAAAAAAAA0AAAACAAAAAAAAAA4AAAABAAAAAAAAAA8AAAACAAAAAAAAABAAAAACAAAAAAAAABEAAAACAAAAAAAAABIAAAACAAAAAAAAABMAAAACAAAAAAAAABQAAAACAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAACAAAAAAABAAQAAAABAAAAAAABAAUAAAACAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAACAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAACAAAAAAABAA4AAAABAAAAAAABAA8AAAACAAAAAAABABAAAAACAAAAAAABABEAAAACAAAAAAABABIAAAACAAAAAAABABMAAAACAAAAAAABABQAAAACAAAAAAACAAAAAAACAAAAAAACAAEAAAACAAAAAAACAAIAAAABAAAAAAACAAMAAAABAAAAAAACAAQAAAABAAAAAAACAAUAAAACAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAACAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAABAAAAAAACAA4AAAABAAAAAAACAA8AAAACAAAAAAACABAAAAABAAAAAAACABEAAAABAAAAAAACABIAAAABAAAAAAACABMAAAABAAAAAAACABQAAAABAAAAAAADAAAAAAACAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAACAAAAAAADAAQAAAABAAAAAAADAAUAAAABAAAAAAADAAYAAAACAAAAAAADAAcAAAACAAAAAAADAAgAAAACAAAAAAADAAkAAAACAAAAAAADAAoAAAACAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAADAA0AAAABAAAAAAADAA4AAAACAAAAAAADAA8AAAABAAAAAAADABAAAAABAAAAAAADABEAAAACAAAAAAADABIAAAACAAAAAAADABMAAAACAAAAAAADABQAAAACAAAAAAAEAAAAAAACAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAQAAAABAAAAAAAEAAUAAAABAAAAAAAEAAYAAAACAAAAAAAEAAcAAAACAAAAAAAEAAgAAAACAAAAAAAEAAkAAAACAAAAAAAEAAoAAAACAAAAAAAEAAsAAAACAAAAAAAEAAwAAAACAAAAAAAEAA0AAAABAAAAAAAEAA4AAAACAAAAAAAEAA8AAAABAAAAAAAEABAAAAACAAAAAAAEABEAAAACAAAAAAAEABIAAAACAAAAAAAEABMAAAACAAAAAAAEABQAAAACAAAAAAAFAAAAAAACAAAAAAAFAAEAAAACAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAABAAAAAAAFAAQAAAACAAAAAAAFAAUAAAABAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAACAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAABAAAAAAAFAA4AAAABAAAAAAAFAA8AAAABAAAAAAAFABAAAAABAAAAAAAFABEAAAABAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAACAAAAAAAGAAAAAAACAAAAAAAGAAEAAAACAAAAAAAGAAIAAAABAAAAAAAGAAMAAAABAAAAAAAGAAQAAAACAAAAAAAGAAUAAAABAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAACAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAABAAAAAAAGAA8AAAAAAAAAAAAGABAAAAAAAAAAAAAGABEAAAABAAAAAAAGABIAAAABAAAAAAAGABMAAAAAAAAAAAAGABQAAAACAAAAAAAHAAAAAAACAAAAAAAHAAEAAAACAAAAAAAHAAIAAAABAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAABAAAAAAAHAAYAAAACAAAAAAAHAAcAAAACAAAAAAAHAAgAAAACAAAAAAAHAAkAAAACAAAAAAAHAAoAAAACAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAABAAAAAAAHAA8AAAAAAAAAAAAHABAAAAAAAAAAAAAHABEAAAAAAAAAAAAHABIAAAABAAAAAAAHABMAAAABAAAAAAAHABQAAAACAAAAAAAIAAAAAAACAAAAAAAIAAEAAAACAAAAAAAIAAIAAAABAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAACAAAAAAAIAAUAAAABAAAAAAAIAAYAAAACAAAAAAAIAAcAAAACAAAAAAAIAAgAAAACAAAAAAAIAAkAAAABAAAAAAAIAAoAAAABAAAAAAAIAAsAAAABAAAAAAAIAAwAAAABAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAABAAAAAAAIAA8AAAAAAAAAAAAIABAAAAAAAAAAAAAIABEAAAAAAAAAAAAIABIAAAAAAAAAAAAIABMAAAABAAAAAAAIABQAAAACAAAAAAAJAAAAAAACAAAAAAAJAAEAAAACAAAAAAAJAAIAAAABAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAABAAAAAAAJAAYAAAACAAAAAAAJAAcAAAACAAAAAAAJAAkAAAABAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAABAAAAAAAJAA0AAAABAAAAAAAJAA4AAAABAAAAAAAJAA8AAAABAAAAAAAJABAAAAACAAAAAAAJABEAAAACAAAAAAAJABIAAAABAAAAAAAJABMAAAABAAAAAAAJABQAAAACAAAAAAAKAAAAAAACAAAAAAAKAAEAAAACAAAAAAAKAAIAAAABAAAAAAAKAAMAAAABAAAAAAAKAAQAAAABAAAAAAAKAAUAAAABAAAAAAAKAAYAAAABAAAAAAAKAAcAAAABAAAAAAAKAAgAAAABAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAABAAAAAAAKAA4AAAABAAAAAAAKAA8AAAABAAAAAAAKABAAAAABAAAAAAAKABEAAAABAAAAAAAKABIAAAABAAAAAAAKABMAAAACAAAAAAAKABQAAAACAAAAAAALAAAAAAACAAAAAAALAAEAAAABAAAAAAALAAIAAAABAAAAAAALAAMAAAABAAAAAAALAAQAAAACAAAAAAALAAUAAAACAAAAAAALAAYAAAACAAAAAAALAAcAAAABAAAAAAALAAgAAAABAAAAAAALAAkAAAABAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAACAAAAAAALAA4AAAABAAAAAAALAA8AAAABAAAAAAALABAAAAAAAAAAAAALABEAAAAAAAAAAAALABIAAAAAAAAAAAALABMAAAAAAAAAAAALABQAAAACAAAAAAAMAAAAAAACAAAAAAAMAAEAAAABAAAAAAAMAAIAAAACAAAAAAAMAAMAAAABAAAAAAAMAAQAAAABAAAAAAAMAAUAAAABAAAAAAAMAAYAAAABAAAAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAAMAAkAAAABAAAAAAAMAAoAAAABAAAAAAAMAAsAAAABAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAABAAAAAAAMAA4AAAABAAAAAAAMAA8AAAAAAAAAAAAMABAAAAAAAAAAAAAMABEAAAAAAAAAAAAMABIAAAAAAAAAAAAMABMAAAAAAAAAAAAMABQAAAACAAAAAAANAAAAAAACAAAAAAANAAEAAAABAAAAAAANAAIAAAABAAAAAAANAAMAAAACAAAAAAANAAQAAAABAAAAAAANAAUAAAABAAAAAAANAAYAAAACAAAAAAANAAcAAAACAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAABAAAAAAANAAwAAAABAAAAAAANAA0AAAABAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAACAAAAAAAOAAAAAAACAAAAAAAOAAEAAAACAAAAAAAOAAIAAAABAAAAAAAOAAMAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAACAAAAAAAOAAYAAAACAAAAAAAOAAcAAAACAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAACAAAAAAAOAA0AAAACAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAOABIAAAAAAAAAAAAOABMAAAAAAAAAAAAOABQAAAACAAAAAAAPAAAAAAACAAAAAAAPAAEAAAACAAAAAAAPAAIAAAACAAAAAAAPAAMAAAACAAAAAAAPAAQAAAACAAAAAAAPAAUAAAACAAAAAAAPAAYAAAACAAAAAAAPAAcAAAACAAAAAAAPAAgAAAACAAAAAAAPAAkAAAACAAAAAAAPAAoAAAACAAAAAAAPAAsAAAACAAAAAAAPAAwAAAACAAAAAAAPAA0AAAACAAAAAAAPAA4AAAACAAAAAAAPAA8AAAACAAAAAAAPABAAAAACAAAAAAAPABEAAAACAAAAAAAPABIAAAACAAAAAAAPABMAAAACAAAAAAAPABQAAAACAAAAAAAJAAgAAAABAAAAAAA=")
tile_set = SubResource("TileSet_e0an3")

[node name="OpponentPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_4xfga")

[node name="SystemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_paxxb")

[node name="FlyingSystemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gldc4")

[node name="FlyingOpponentPath" type="Path2D" parent="."]
position = Vector2(-450, 100)
curve = SubResource("Curve2D_0cso3")
